WAM-Studio-SF-Build/force-app/main/default/objects/AI_Insight__c/AI_Insight__c.object-meta.xml
<CustomObject>
    <description>AI-generated insight about a client, household, or portfolio. Part of Salesforce Wealth AI Studio.</description>
    <label>AI Insight</label>
    <nameField>
        <displayFormat>AIN-{00000}</displayFormat>
        <label>AI Insight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>