WAM-Studio-SF-Build/force-app/main/default/objects/AI_Insight__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AI Insights</relationshipLabel>
    <relationshipName>AI_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>