WAM-Studio-SF-Build/force-app/main/default/objects/AI_Insight__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>