WAM-Studio-SF-Build/force-app/main/default/objects/AI_Insight__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount</referenceTo>
    <relationshipLabel>AI Insights</relationshipLabel>
    <relationshipName>AI_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>