WAM-Studio-SF-Build/force-app/main/default/objects/AI_Insight__c/fields/Insight_Type__c.field-meta.xml
<CustomField>
    <fullName>Insight_Type__c</fullName>
    <label>Insight Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Portfolio</fullName><default>true</default><label>Portfolio</label></value>
            <value><fullName>Relationship</fullName><default>false</default><label>Relationship</label></value>
            <value><fullName>Risk</fullName><default>false</default><label>Risk</label></value>
            <value><fullName>Opportunity</fullName><default>false</default><label>Opportunity</label></value>
            <value><fullName>Service</fullName><default>false</default><label>Service</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>