WAM-Studio-SF-Build/force-app/main/default/objects/AI_Insight__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Reviewed</fullName><default>false</default><label>Reviewed</label></value>
            <value><fullName>Actioned</fullName><default>false</default><label>Actioned</label></value>
            <value><fullName>Dismissed</fullName><default>false</default><label>Dismissed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>